bynkc/tests/fixtures/positive/349_service_default_given/src/api.bynk
context api

type View = { ok: Bool }

capability Logger { fn info(message: String) -> Effect[()] }

provides Logger = ConsoleLogger {
  fn info(message: String) -> Effect[()] {
    Effect.pure(())
  }
}

-- v0.155: the service-level `given` default. Every handler that declares no
-- `given` of its own inherits `Logger` (injected by the normalization pass), so
-- the capability the whole service logs through is stated once.
service api from http by Visitor given Logger {
  on GET("/a") () -> Effect[HttpResult[View]] {
    let _ <- Logger.info("a")
    Ok(View { ok: true })
  }

  on GET("/b") () -> Effect[HttpResult[View]] {
    let _ <- Logger.info("b")
    Ok(View { ok: true })
  }
}
