bynkc/tests/fixtures/negative/300_http_cache_bad_max_age/src/api.bynk
context api

type View = { ok: Bool }

service api from http {
  @cache(scope: private)
  on GET("/items") () -> Effect[HttpResult[View]] by Visitor {
    Ok(View { ok: true })
  }
}
